phase3.output
Grammar

    0 $accept: program $end

    1 program: declarations_list

    2 declarations_list: declarations_list declaration
    3                  | declaration

    4 declaration: var_declaration
    5            | fun_declaration
    6            | rec_declaration

    7 rec_declaration: RECORD_KW saved_id LEFT_BRACE local_declarations RIGHT_BRACE

    8 var_declaration: type_specifier var_decl_list SEMICOLON

    9 scoped_var_declaration: scoped_type_specifier var_decl_list SEMICOLON

   10 var_decl_list: var_decl_list COMMA var_decl_initialize
   11              | var_decl_initialize

   12 var_decl_initialize: var_decl_id
   13                    | var_decl_id COLON simple_expression

   14 var_decl_id: saved_id
   15            | saved_id LEFT_BRACKET saved_NUMCONST RIGHT_BRACKET

   16 scoped_type_specifier: STATIC_KW type_specifier
   17                      | type_specifier

   18 type_specifier: return_type_specifier
   19               | saved_id

   20 return_type_specifier: INTEGER_KW
   21                      | REAL_KW
   22                      | BOOL_KW
   23                      | CHAR_KW

   24 fun_declaration: type_specifier saved_id LEFT_PARENTHESES params RIGHT_PARENTHESES statement
   25                | saved_id LEFT_PARENTHESES params RIGHT_PARENTHESES statement

   26 params: param_list
   27       | /* empty */

   28 param_list: param_list SEMICOLON param_type_list
   29           | param_type_list

   30 param_type_list: type_specifier param_id_list

   31 param_id_list: param_id_list COMMA param_id
   32              | param_id

   33 param_id: saved_id
   34         | saved_id LEFT_BRACKET RIGHT_BRACKET

   35 statement: expression_stmt
   36          | compound_stmt
   37          | selection_stmt
   38          | iteration_stmt
   39          | return_stmt
   40          | break_stmt

   41 compound_stmt: LEFT_BRACE local_declarations statement_list RIGHT_BRACE
   42              | LEFT_BRACE local_declarations RIGHT_BRACE

   43 local_declarations: local_declarations scoped_var_declaration
   44                   | /* empty */

   45 statement_list: statement_list statement
   46               | statement

   47 expression_stmt: expression SEMICOLON
   48                | SEMICOLON

   49 selection_stmt: IF_KW LEFT_PARENTHESES simple_expression RIGHT_PARENTHESES statement
   50               | IF_KW LEFT_PARENTHESES simple_expression RIGHT_PARENTHESES statement ELSE_KW statement
   51               | SWITCH_KW LEFT_PARENTHESES simple_expression RIGHT_PARENTHESES case_element default_element END_KW

   52 case_element: CASE_KW NUMCONST COLON statement SEMICOLON
   53             | case_element CASE_KW NUMCONST COLON statement SEMICOLON

   54 default_element: DEFAULT_KW COLON statement SEMICOLON
   55                | /* empty */

   56 iteration_stmt: WHILE_KW LEFT_PARENTHESES simple_expression RIGHT_PARENTHESES statement

   57 return_stmt: RETURN_KW SEMICOLON
   58            | RETURN_KW expression SEMICOLON

   59 break_stmt: BREAK_KW SEMICOLON

   60 expression: mutable ASSIGN expression
   61           | mutable PLUS_EQUAL expression
   62           | mutable MINUS_EQUAL expression
   63           | mutable MULTIPLY_EQUAL expression
   64           | mutable DIVIDER_EQUAL expression
   65           | mutable PLUS_PLUS
   66           | mutable MINUS_MINUS
   67           | simple_expression

   68 simple_expression: simple_expression OR_KW simple_expression
   69                  | simple_expression AND_KW simple_expression
   70                  | simple_expression OR_KW ELSE_KW simple_expression
   71                  | simple_expression AND_KW THEN_KW simple_expression
   72                  | NOT_KW simple_expression
   73                  | rel_expression

   74 rel_expression: mathlogic_expression LE mathlogic_expression
   75               | mathlogic_expression LT mathlogic_expression
   76               | mathlogic_expression GT mathlogic_expression
   77               | mathlogic_expression GE mathlogic_expression
   78               | mathlogic_expression EQ mathlogic_expression
   79               | mathlogic_expression NE mathlogic_expression
   80               | mathlogic_expression

   81 mathlogic_expression: mathlogic_expression PLUS unary_expression
   82                     | mathlogic_expression MINUS unary_expression
   83                     | mathlogic_expression MULTIPLY unary_expression
   84                     | mathlogic_expression DIVIDER unary_expression
   85                     | mathlogic_expression MODUL unary_expression
   86                     | unary_expression

   87 unary_expression: MINUS unary_expression
   88                 | MULTIPLY unary_expression MULTIPLY_Unary
   89                 | QUESTION unary_expression
   90                 | factor

   91 factor: immutable
   92       | mutable

   93 mutable: saved_id
   94        | mutable LEFT_BRACKET expression RIGHT_BRACKET
   95        | mutable DOT_KW saved_id

   96 immutable: LEFT_PARENTHESES expression RIGHT_PARENTHESES
   97          | call
   98          | constant

   99 call: saved_id LEFT_PARENTHESES args RIGHT_PARENTHESES

  100 args: arg_list
  101     | /* empty */

  102 arg_list: arg_list COMMA expression
  103         | expression

  104 constant: saved_NUMCONST
  105         | saved_REALCONST
  106         | saved_CHARCONST
  107         | saved_BOOLCONST

  108 saved_id: ID

  109 saved_NUMCONST: NUMCONST

  110 saved_REALCONST: REALCONST

  111 saved_CHARCONST: CHARCONST

  112 saved_BOOLCONST: BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
LEFT_BRACE (258) 7 41 42
RIGHT_BRACE (259) 7 41 42
LEFT_BRACKET (260) 15 34 94
RIGHT_BRACKET (261) 15 34 94
LEFT_PARENTHESES (262) 24 25 49 50 51 56 96 99
RIGHT_PARENTHESES (263) 24 25 49 50 51 56 96 99
SEMICOLON (264) 8 9 28 47 48 52 53 54 57 58 59
COLON (265) 13 52 53 54
COMMA (266) 10 31 102
INTEGER_KW (267) 20
REAL_KW (268) 21
CHAR_KW (269) 23
BOOL_KW (270) 22
IF_KW (271) 49 50
THEN_KW (272) 71
ELSE_KW (273) 50 70
WHILE_KW (274) 56
SWITCH_KW (275) 51
CASE_KW (276) 52 53
DEFAULT_KW (277) 54
END_KW (278) 51
RETURN_KW (279) 57 58
BREAK_KW (280) 59
AND_KW (281) 69 71
OR_KW (282) 68 70
NOT_KW (283) 72
STATIC_KW (284) 16
RECORD_KW (285) 7
DOT_KW (286) 95
PLUS (287) 81
MINUS (288) 82 87
MULTIPLY (289) 83 88
DIVIDER (290) 84
MODUL (291) 85
QUESTION (292) 89
PLUS_EQUAL (293) 61
MINUS_EQUAL (294) 62
MULTIPLY_EQUAL (295) 63
DIVIDER_EQUAL (296) 64
PLUS_PLUS (297) 65
MINUS_MINUS (298) 66
ASSIGN (299) 60
LT (300) 75
LE (301) 74
GT (302) 76
GE (303) 77
EQ (304) 78
NE (305) 79
ID (306) 108
NUMCONST (307) 52 53 109
REALCONST (308) 110
CHARCONST (309) 111
BOOLCONST (310) 112
ELSE_CON (311)
AND_THEN (312)
OR_ELSE (313)
Question_Unary (314)
MULTIPLY_Unary (315) 88
MINUS_Unary (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
declarations_list (64)
    on left: 2 3, on right: 1 2
declaration (65)
    on left: 4 5 6, on right: 2 3
rec_declaration (66)
    on left: 7, on right: 6
var_declaration (67)
    on left: 8, on right: 4
scoped_var_declaration (68)
    on left: 9, on right: 43
var_decl_list (69)
    on left: 10 11, on right: 8 9 10
var_decl_initialize (70)
    on left: 12 13, on right: 10 11
var_decl_id (71)
    on left: 14 15, on right: 12 13
scoped_type_specifier (72)
    on left: 16 17, on right: 9
type_specifier (73)
    on left: 18 19, on right: 8 16 17 24 30
return_type_specifier (74)
    on left: 20 21 22 23, on right: 18
fun_declaration (75)
    on left: 24 25, on right: 5
params (76)
    on left: 26 27, on right: 24 25
param_list (77)
    on left: 28 29, on right: 26 28
param_type_list (78)
    on left: 30, on right: 28 29
param_id_list (79)
    on left: 31 32, on right: 30 31
param_id (80)
    on left: 33 34, on right: 31 32
statement (81)
    on left: 35 36 37 38 39 40, on right: 24 25 45 46 49 50 52 53 54
    56
compound_stmt (82)
    on left: 41 42, on right: 36
local_declarations (83)
    on left: 43 44, on right: 7 41 42 43
statement_list (84)
    on left: 45 46, on right: 41 45
expression_stmt (85)
    on left: 47 48, on right: 35
selection_stmt (86)
    on left: 49 50 51, on right: 37
case_element (87)
    on left: 52 53, on right: 51 53
default_element (88)
    on left: 54 55, on right: 51
iteration_stmt (89)
    on left: 56, on right: 38
return_stmt (90)
    on left: 57 58, on right: 39
break_stmt (91)
    on left: 59, on right: 40
expression (92)
    on left: 60 61 62 63 64 65 66 67, on right: 47 58 60 61 62 63 64
    94 96 102 103
simple_expression (93)
    on left: 68 69 70 71 72 73, on right: 13 49 50 51 56 67 68 69 70
    71 72
rel_expression (94)
    on left: 74 75 76 77 78 79 80, on right: 73
mathlogic_expression (95)
    on left: 81 82 83 84 85 86, on right: 74 75 76 77 78 79 80 81 82
    83 84 85
unary_expression (96)
    on left: 87 88 89 90, on right: 81 82 83 84 85 86 87 88 89
factor (97)
    on left: 91 92, on right: 90
mutable (98)
    on left: 93 94 95, on right: 60 61 62 63 64 65 66 92 94 95
immutable (99)
    on left: 96 97 98, on right: 91
call (100)
    on left: 99, on right: 97
args (101)
    on left: 100 101, on right: 99
arg_list (102)
    on left: 102 103, on right: 100 102
constant (103)
    on left: 104 105 106 107, on right: 98
saved_id (104)
    on left: 108, on right: 7 14 15 19 24 25 33 34 93 95 99
saved_NUMCONST (105)
    on left: 109, on right: 15 104
saved_REALCONST (106)
    on left: 110, on right: 105
saved_CHARCONST (107)
    on left: 111, on right: 106
saved_BOOLCONST (108)
    on left: 112, on right: 107


state 0

    0 $accept: . program $end

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    RECORD_KW   shift, and go to state 5
    ID          shift, and go to state 6

    program                go to state 7
    declarations_list      go to state 8
    declaration            go to state 9
    rec_declaration        go to state 10
    var_declaration        go to state 11
    type_specifier         go to state 12
    return_type_specifier  go to state 13
    fun_declaration        go to state 14
    saved_id               go to state 15


state 1

   20 return_type_specifier: INTEGER_KW .

    $default  reduce using rule 20 (return_type_specifier)


state 2

   21 return_type_specifier: REAL_KW .

    $default  reduce using rule 21 (return_type_specifier)


state 3

   23 return_type_specifier: CHAR_KW .

    $default  reduce using rule 23 (return_type_specifier)


state 4

   22 return_type_specifier: BOOL_KW .

    $default  reduce using rule 22 (return_type_specifier)


state 5

    7 rec_declaration: RECORD_KW . saved_id LEFT_BRACE local_declarations RIGHT_BRACE

    ID  shift, and go to state 6

    saved_id  go to state 16


state 6

  108 saved_id: ID .

    $default  reduce using rule 108 (saved_id)


state 7

    0 $accept: program . $end

    $end  shift, and go to state 17


state 8

    1 program: declarations_list .
    2 declarations_list: declarations_list . declaration

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    RECORD_KW   shift, and go to state 5
    ID          shift, and go to state 6

    $default  reduce using rule 1 (program)

    declaration            go to state 18
    rec_declaration        go to state 10
    var_declaration        go to state 11
    type_specifier         go to state 12
    return_type_specifier  go to state 13
    fun_declaration        go to state 14
    saved_id               go to state 15


state 9

    3 declarations_list: declaration .

    $default  reduce using rule 3 (declarations_list)


state 10

    6 declaration: rec_declaration .

    $default  reduce using rule 6 (declaration)


state 11

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 12

    8 var_declaration: type_specifier . var_decl_list SEMICOLON
   24 fun_declaration: type_specifier . saved_id LEFT_PARENTHESES params RIGHT_PARENTHESES statement

    ID  shift, and go to state 6

    var_decl_list        go to state 19
    var_decl_initialize  go to state 20
    var_decl_id          go to state 21
    saved_id             go to state 22


state 13

   18 type_specifier: return_type_specifier .

    $default  reduce using rule 18 (type_specifier)


state 14

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 15

   19 type_specifier: saved_id .
   25 fun_declaration: saved_id . LEFT_PARENTHESES params RIGHT_PARENTHESES statement

    LEFT_PARENTHESES  shift, and go to state 23

    $default  reduce using rule 19 (type_specifier)


state 16

    7 rec_declaration: RECORD_KW saved_id . LEFT_BRACE local_declarations RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 24


state 17

    0 $accept: program $end .

    $default  accept


state 18

    2 declarations_list: declarations_list declaration .

    $default  reduce using rule 2 (declarations_list)


state 19

    8 var_declaration: type_specifier var_decl_list . SEMICOLON
   10 var_decl_list: var_decl_list . COMMA var_decl_initialize

    SEMICOLON  shift, and go to state 25
    COMMA      shift, and go to state 26


state 20

   11 var_decl_list: var_decl_initialize .

    $default  reduce using rule 11 (var_decl_list)


state 21

   12 var_decl_initialize: var_decl_id .
   13                    | var_decl_id . COLON simple_expression

    COLON  shift, and go to state 27

    $default  reduce using rule 12 (var_decl_initialize)


state 22

   14 var_decl_id: saved_id .
   15            | saved_id . LEFT_BRACKET saved_NUMCONST RIGHT_BRACKET
   24 fun_declaration: type_specifier saved_id . LEFT_PARENTHESES params RIGHT_PARENTHESES statement

    LEFT_BRACKET      shift, and go to state 28
    LEFT_PARENTHESES  shift, and go to state 29

    $default  reduce using rule 14 (var_decl_id)


state 23

   25 fun_declaration: saved_id LEFT_PARENTHESES . params RIGHT_PARENTHESES statement

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    ID          shift, and go to state 6

    $default  reduce using rule 27 (params)

    type_specifier         go to state 30
    return_type_specifier  go to state 13
    params                 go to state 31
    param_list             go to state 32
    param_type_list        go to state 33
    saved_id               go to state 34


state 24

    7 rec_declaration: RECORD_KW saved_id LEFT_BRACE . local_declarations RIGHT_BRACE

    $default  reduce using rule 44 (local_declarations)

    local_declarations  go to state 35


state 25

    8 var_declaration: type_specifier var_decl_list SEMICOLON .

    $default  reduce using rule 8 (var_declaration)


state 26

   10 var_decl_list: var_decl_list COMMA . var_decl_initialize

    ID  shift, and go to state 6

    var_decl_initialize  go to state 36
    var_decl_id          go to state 21
    saved_id             go to state 37


state 27

   13 var_decl_initialize: var_decl_id COLON . simple_expression

    LEFT_PARENTHESES  shift, and go to state 38
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    simple_expression     go to state 47
    rel_expression        go to state 48
    mathlogic_expression  go to state 49
    unary_expression      go to state 50
    factor                go to state 51
    mutable               go to state 52
    immutable             go to state 53
    call                  go to state 54
    constant              go to state 55
    saved_id              go to state 56
    saved_NUMCONST        go to state 57
    saved_REALCONST       go to state 58
    saved_CHARCONST       go to state 59
    saved_BOOLCONST       go to state 60


state 28

   15 var_decl_id: saved_id LEFT_BRACKET . saved_NUMCONST RIGHT_BRACKET

    NUMCONST  shift, and go to state 43

    saved_NUMCONST  go to state 61


state 29

   24 fun_declaration: type_specifier saved_id LEFT_PARENTHESES . params RIGHT_PARENTHESES statement

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    ID          shift, and go to state 6

    $default  reduce using rule 27 (params)

    type_specifier         go to state 30
    return_type_specifier  go to state 13
    params                 go to state 62
    param_list             go to state 32
    param_type_list        go to state 33
    saved_id               go to state 34


state 30

   30 param_type_list: type_specifier . param_id_list

    ID  shift, and go to state 6

    param_id_list  go to state 63
    param_id       go to state 64
    saved_id       go to state 65


state 31

   25 fun_declaration: saved_id LEFT_PARENTHESES params . RIGHT_PARENTHESES statement

    RIGHT_PARENTHESES  shift, and go to state 66


state 32

   26 params: param_list .
   28 param_list: param_list . SEMICOLON param_type_list

    SEMICOLON  shift, and go to state 67

    $default  reduce using rule 26 (params)


state 33

   29 param_list: param_type_list .

    $default  reduce using rule 29 (param_list)


state 34

   19 type_specifier: saved_id .

    $default  reduce using rule 19 (type_specifier)


state 35

    7 rec_declaration: RECORD_KW saved_id LEFT_BRACE local_declarations . RIGHT_BRACE
   43 local_declarations: local_declarations . scoped_var_declaration

    RIGHT_BRACE  shift, and go to state 68
    INTEGER_KW   shift, and go to state 1
    REAL_KW      shift, and go to state 2
    CHAR_KW      shift, and go to state 3
    BOOL_KW      shift, and go to state 4
    STATIC_KW    shift, and go to state 69
    ID           shift, and go to state 6

    scoped_var_declaration  go to state 70
    scoped_type_specifier   go to state 71
    type_specifier          go to state 72
    return_type_specifier   go to state 13
    saved_id                go to state 34


state 36

   10 var_decl_list: var_decl_list COMMA var_decl_initialize .

    $default  reduce using rule 10 (var_decl_list)


state 37

   14 var_decl_id: saved_id .
   15            | saved_id . LEFT_BRACKET saved_NUMCONST RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 28

    $default  reduce using rule 14 (var_decl_id)


state 38

   96 immutable: LEFT_PARENTHESES . expression RIGHT_PARENTHESES

    LEFT_PARENTHESES  shift, and go to state 38
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    expression            go to state 73
    simple_expression     go to state 74
    rel_expression        go to state 48
    mathlogic_expression  go to state 49
    unary_expression      go to state 50
    factor                go to state 51
    mutable               go to state 75
    immutable             go to state 53
    call                  go to state 54
    constant              go to state 55
    saved_id              go to state 56
    saved_NUMCONST        go to state 57
    saved_REALCONST       go to state 58
    saved_CHARCONST       go to state 59
    saved_BOOLCONST       go to state 60


state 39

   72 simple_expression: NOT_KW . simple_expression

    LEFT_PARENTHESES  shift, and go to state 38
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    simple_expression     go to state 76
    rel_expression        go to state 48
    mathlogic_expression  go to state 49
    unary_expression      go to state 50
    factor                go to state 51
    mutable               go to state 52
    immutable             go to state 53
    call                  go to state 54
    constant              go to state 55
    saved_id              go to state 56
    saved_NUMCONST        go to state 57
    saved_REALCONST       go to state 58
    saved_CHARCONST       go to state 59
    saved_BOOLCONST       go to state 60


state 40

   87 unary_expression: MINUS . unary_expression

    LEFT_PARENTHESES  shift, and go to state 38
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    unary_expression  go to state 77
    factor            go to state 51
    mutable           go to state 52
    immutable         go to state 53
    call              go to state 54
    constant          go to state 55
    saved_id          go to state 56
    saved_NUMCONST    go to state 57
    saved_REALCONST   go to state 58
    saved_CHARCONST   go to state 59
    saved_BOOLCONST   go to state 60


state 41

   88 unary_expression: MULTIPLY . unary_expression MULTIPLY_Unary

    LEFT_PARENTHESES  shift, and go to state 38
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    unary_expression  go to state 78
    factor            go to state 51
    mutable           go to state 52
    immutable         go to state 53
    call              go to state 54
    constant          go to state 55
    saved_id          go to state 56
    saved_NUMCONST    go to state 57
    saved_REALCONST   go to state 58
    saved_CHARCONST   go to state 59
    saved_BOOLCONST   go to state 60


state 42

   89 unary_expression: QUESTION . unary_expression

    LEFT_PARENTHESES  shift, and go to state 38
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    unary_expression  go to state 79
    factor            go to state 51
    mutable           go to state 52
    immutable         go to state 53
    call              go to state 54
    constant          go to state 55
    saved_id          go to state 56
    saved_NUMCONST    go to state 57
    saved_REALCONST   go to state 58
    saved_CHARCONST   go to state 59
    saved_BOOLCONST   go to state 60


state 43

  109 saved_NUMCONST: NUMCONST .

    $default  reduce using rule 109 (saved_NUMCONST)


state 44

  110 saved_REALCONST: REALCONST .

    $default  reduce using rule 110 (saved_REALCONST)


state 45

  111 saved_CHARCONST: CHARCONST .

    $default  reduce using rule 111 (saved_CHARCONST)


state 46

  112 saved_BOOLCONST: BOOLCONST .

    $default  reduce using rule 112 (saved_BOOLCONST)


state 47

   13 var_decl_initialize: var_decl_id COLON simple_expression .
   68 simple_expression: simple_expression . OR_KW simple_expression
   69                  | simple_expression . AND_KW simple_expression
   70                  | simple_expression . OR_KW ELSE_KW simple_expression
   71                  | simple_expression . AND_KW THEN_KW simple_expression

    AND_KW  shift, and go to state 80
    OR_KW   shift, and go to state 81

    $default  reduce using rule 13 (var_decl_initialize)


state 48

   73 simple_expression: rel_expression .

    $default  reduce using rule 73 (simple_expression)


state 49

   74 rel_expression: mathlogic_expression . LE mathlogic_expression
   75               | mathlogic_expression . LT mathlogic_expression
   76               | mathlogic_expression . GT mathlogic_expression
   77               | mathlogic_expression . GE mathlogic_expression
   78               | mathlogic_expression . EQ mathlogic_expression
   79               | mathlogic_expression . NE mathlogic_expression
   80               | mathlogic_expression .
   81 mathlogic_expression: mathlogic_expression . PLUS unary_expression
   82                     | mathlogic_expression . MINUS unary_expression
   83                     | mathlogic_expression . MULTIPLY unary_expression
   84                     | mathlogic_expression . DIVIDER unary_expression
   85                     | mathlogic_expression . MODUL unary_expression

    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    MULTIPLY  shift, and go to state 84
    DIVIDER   shift, and go to state 85
    MODUL     shift, and go to state 86
    LT        shift, and go to state 87
    LE        shift, and go to state 88
    GT        shift, and go to state 89
    GE        shift, and go to state 90
    EQ        shift, and go to state 91
    NE        shift, and go to state 92

    $default  reduce using rule 80 (rel_expression)


state 50

   86 mathlogic_expression: unary_expression .

    $default  reduce using rule 86 (mathlogic_expression)


state 51

   90 unary_expression: factor .

    $default  reduce using rule 90 (unary_expression)


state 52

   92 factor: mutable .
   94 mutable: mutable . LEFT_BRACKET expression RIGHT_BRACKET
   95        | mutable . DOT_KW saved_id

    LEFT_BRACKET  shift, and go to state 93
    DOT_KW        shift, and go to state 94

    $default  reduce using rule 92 (factor)


state 53

   91 factor: immutable .

    $default  reduce using rule 91 (factor)


state 54

   97 immutable: call .

    $default  reduce using rule 97 (immutable)


state 55

   98 immutable: constant .

    $default  reduce using rule 98 (immutable)


state 56

   93 mutable: saved_id .
   99 call: saved_id . LEFT_PARENTHESES args RIGHT_PARENTHESES

    LEFT_PARENTHESES  shift, and go to state 95

    $default  reduce using rule 93 (mutable)


state 57

  104 constant: saved_NUMCONST .

    $default  reduce using rule 104 (constant)


state 58

  105 constant: saved_REALCONST .

    $default  reduce using rule 105 (constant)


state 59

  106 constant: saved_CHARCONST .

    $default  reduce using rule 106 (constant)


state 60

  107 constant: saved_BOOLCONST .

    $default  reduce using rule 107 (constant)


state 61

   15 var_decl_id: saved_id LEFT_BRACKET saved_NUMCONST . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 96


state 62

   24 fun_declaration: type_specifier saved_id LEFT_PARENTHESES params . RIGHT_PARENTHESES statement

    RIGHT_PARENTHESES  shift, and go to state 97


state 63

   30 param_type_list: type_specifier param_id_list .
   31 param_id_list: param_id_list . COMMA param_id

    COMMA  shift, and go to state 98

    $default  reduce using rule 30 (param_type_list)


state 64

   32 param_id_list: param_id .

    $default  reduce using rule 32 (param_id_list)


state 65

   33 param_id: saved_id .
   34         | saved_id . LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 99

    $default  reduce using rule 33 (param_id)


state 66

   25 fun_declaration: saved_id LEFT_PARENTHESES params RIGHT_PARENTHESES . statement

    LEFT_BRACE        shift, and go to state 100
    LEFT_PARENTHESES  shift, and go to state 38
    SEMICOLON         shift, and go to state 101
    IF_KW             shift, and go to state 102
    WHILE_KW          shift, and go to state 103
    SWITCH_KW         shift, and go to state 104
    RETURN_KW         shift, and go to state 105
    BREAK_KW          shift, and go to state 106
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    statement             go to state 107
    compound_stmt         go to state 108
    expression_stmt       go to state 109
    selection_stmt        go to state 110
    iteration_stmt        go to state 111
    return_stmt           go to state 112
    break_stmt            go to state 113
    expression            go to state 114
    simple_expression     go to state 74
    rel_expression        go to state 48
    mathlogic_expression  go to state 49
    unary_expression      go to state 50
    factor                go to state 51
    mutable               go to state 75
    immutable             go to state 53
    call                  go to state 54
    constant              go to state 55
    saved_id              go to state 56
    saved_NUMCONST        go to state 57
    saved_REALCONST       go to state 58
    saved_CHARCONST       go to state 59
    saved_BOOLCONST       go to state 60


state 67

   28 param_list: param_list SEMICOLON . param_type_list

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    ID          shift, and go to state 6

    type_specifier         go to state 30
    return_type_specifier  go to state 13
    param_type_list        go to state 115
    saved_id               go to state 34


state 68

    7 rec_declaration: RECORD_KW saved_id LEFT_BRACE local_declarations RIGHT_BRACE .

    $default  reduce using rule 7 (rec_declaration)


state 69

   16 scoped_type_specifier: STATIC_KW . type_specifier

    INTEGER_KW  shift, and go to state 1
    REAL_KW     shift, and go to state 2
    CHAR_KW     shift, and go to state 3
    BOOL_KW     shift, and go to state 4
    ID          shift, and go to state 6

    type_specifier         go to state 116
    return_type_specifier  go to state 13
    saved_id               go to state 34


state 70

   43 local_declarations: local_declarations scoped_var_declaration .

    $default  reduce using rule 43 (local_declarations)


state 71

    9 scoped_var_declaration: scoped_type_specifier . var_decl_list SEMICOLON

    ID  shift, and go to state 6

    var_decl_list        go to state 117
    var_decl_initialize  go to state 20
    var_decl_id          go to state 21
    saved_id             go to state 37


state 72

   17 scoped_type_specifier: type_specifier .

    $default  reduce using rule 17 (scoped_type_specifier)


state 73

   96 immutable: LEFT_PARENTHESES expression . RIGHT_PARENTHESES

    RIGHT_PARENTHESES  shift, and go to state 118


state 74

   67 expression: simple_expression .
   68 simple_expression: simple_expression . OR_KW simple_expression
   69                  | simple_expression . AND_KW simple_expression
   70                  | simple_expression . OR_KW ELSE_KW simple_expression
   71                  | simple_expression . AND_KW THEN_KW simple_expression

    AND_KW  shift, and go to state 80
    OR_KW   shift, and go to state 81

    $default  reduce using rule 67 (expression)


state 75

   60 expression: mutable . ASSIGN expression
   61           | mutable . PLUS_EQUAL expression
   62           | mutable . MINUS_EQUAL expression
   63           | mutable . MULTIPLY_EQUAL expression
   64           | mutable . DIVIDER_EQUAL expression
   65           | mutable . PLUS_PLUS
   66           | mutable . MINUS_MINUS
   92 factor: mutable .
   94 mutable: mutable . LEFT_BRACKET expression RIGHT_BRACKET
   95        | mutable . DOT_KW saved_id

    LEFT_BRACKET    shift, and go to state 93
    DOT_KW          shift, and go to state 94
    PLUS_EQUAL      shift, and go to state 119
    MINUS_EQUAL     shift, and go to state 120
    MULTIPLY_EQUAL  shift, and go to state 121
    DIVIDER_EQUAL   shift, and go to state 122
    PLUS_PLUS       shift, and go to state 123
    MINUS_MINUS     shift, and go to state 124
    ASSIGN          shift, and go to state 125

    $default  reduce using rule 92 (factor)


state 76

   68 simple_expression: simple_expression . OR_KW simple_expression
   69                  | simple_expression . AND_KW simple_expression
   70                  | simple_expression . OR_KW ELSE_KW simple_expression
   71                  | simple_expression . AND_KW THEN_KW simple_expression
   72                  | NOT_KW simple_expression .

    $default  reduce using rule 72 (simple_expression)


state 77

   87 unary_expression: MINUS unary_expression .

    $default  reduce using rule 87 (unary_expression)


state 78

   88 unary_expression: MULTIPLY unary_expression . MULTIPLY_Unary

    MULTIPLY_Unary  shift, and go to state 126


state 79

   89 unary_expression: QUESTION unary_expression .

    $default  reduce using rule 89 (unary_expression)


state 80

   69 simple_expression: simple_expression AND_KW . simple_expression
   71                  | simple_expression AND_KW . THEN_KW simple_expression

    LEFT_PARENTHESES  shift, and go to state 38
    THEN_KW           shift, and go to state 127
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
    ID                shift, and go to state 6
    NUMCONST          shift, and go to state 43
    REALCONST         shift, and go to state 44
    CHARCONST         shift, and go to state 45
    BOOLCONST         shift, and go to state 46

    simple_expression     go to state 128
    rel_expression        go to state 48
    mathlogic_expression  go to state 49
    unary_expression      go to state 50
    factor                go to state 51
    mutable               go to state 52
    immutable             go to state 53
    call                  go to state 54
    constant              go to state 55
    saved_id              go to state 56
    saved_NUMCONST        go to state 57
    saved_REALCONST       go to state 58
    saved_CHARCONST       go to state 59
    saved_BOOLCONST       go to state 60


state 81

   68 simple_expression: simple_expression OR_KW . simple_expression
   70                  | simple_expression OR_KW . ELSE_KW simple_expression

    LEFT_PARENTHESES  shift, and go to state 38
    ELSE_KW           shift, and go to state 129
    NOT_KW            shift, and go to state 39
    MINUS             shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    QUESTION          shift, and go to state 42
